display(), setState and executing checker methods added to Job.