@@ -34,10 +34,10 @@ public class EarlyJobMultiStation extends Station {
     public boolean pickTask(double startTime){
         if (!getTargetTasks().isEmpty()){
             if(getCurrentTaskNo()<1) {
-                Task newTask = getTargetTasks().getFirst();
+                Task newTask = getTargetTasks().get(0);
                 getCurrentTasks().add(newTask);
                 setCurrentTaskNo(getCurrentTaskNo()+1);
-                getTargetTasks().removeFirst();
+                getTargetTasks().remove(0);
                 /*if (!getTargetTasks().isEmpty()) {
                     ArrayList<Task> newCurrentTasks = (ArrayList<Task>) getCurrentTasks().subList(1, getCurrentTasks().size()); //create a new arrayList for taking new task
                     setCurrentTasks(newCurrentTasks);
